--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
-<title>Готель XEXEPEXEPEXPEP</title>
+<title>Готель Дніпро</title>
 </head>
 <body>
 
@@ -20,9 +20,10 @@
 </nav>
 
 <main>
-<h1>Готель XEXEPEXEPEXPEP</h1>
-<p>Запрошуємо вас до нашого затишного готелю, який знаходиться у XEXEPEXEPEXPEP. Ми пропонуємо проживання у комфортних номерах з високим рівнем сервісу.</p>
+<h1>Готель Дніпро</h1>
+<p>Запрошуємо вас до нашого затишного готелю, який знаходиться у затишному краєчку центра міста Черкаси, з дивовижним видом на Дніпро. Ми пропонуємо проживання у комфортних номерах з високим рівнем сервісу.</p>
 </main>
 
 </body>
 </html>
+
