--- a/about.html
+++ b/about.html
@@ -21,8 +21,11 @@
 
 <main>
 <h2>Про готель</h2>
-<p>Готель XEXEPEXEPEXPEP працює з XEXEPEXEPEXPEP року. Ми пропонуємо номери різних категорій та зручне розташування поряд із XEXEPEXEPEXPEP.</p>
+<p>Готельний ко́мплекс «Дніпро» — чотиризірковий готель у центрі Черкас. Збудований у 1989 році як гуртожиток для держслужбовців, реконструйований в 2000 році.
+
+Клієнтам надаються першокласний ресторан, гаражі під охороною, конференц-зал, а також безліч інших послуг. Готель має прості номери, люкс та окремі апартаменти. Всього 73 номери на 110 місць та зручне розташування у центрі міста.</p>
 </main>
 
 </body>
 </html>
+
