--- a/contacts.html
+++ b/contacts.html
@@ -21,9 +21,12 @@
 
 <main>
 <h2>Контакти</h2>
-<p>Телефон: XEXEPEXEPEXPEP</p>
-<p>Email: XEXEPEXEPEXPEP</p>
+<p>Телефон:  + 38 098 182 11 11
+
+</p>
+<p>Email: hoteldnipro.cherkassy@gmail.com</p>
 </main>
 
 </body>
 </html>
+
