--- a/price.html
+++ b/price.html
@@ -22,21 +22,25 @@
 <main>
 <h2>Прайс-лист</h2>
 <table border="1">
+<tr><th>Парк-місця</th><th>Оренда стоянки - 36 грн/доба
+Оренда гаража - 51 грн/доба</th></tr>
+<tr><th>Конференц-зал</th><th>Вартість оренди - 500 грн/год (450 грн/год, якщо більше 2-х годин)</th></tr>
 <tr><th>Номер</th><th>Ціна/доба</th></tr>
-<tr><td>Одномісний у блоці</td><td>1150 грн/доба</td></tr>
-<tr><td>Одномісний стандартний</td><td>1500 грн/доба</td></tr>
-<tr><td>Одномісний для людей з обмеженими можливостями</td><td>1250 грн/доба</td></tr>
-<tr><td>Одномісний поліпшений</td><td>1500 грн/доба</td></tr>
-<tr><td>Двомісний у блоці</td><td>1150 грн/доба (1 людина)/1500 грн доба (2 людини)</td></tr>
-<tr><td>Двомісний стандартний</td><td>1250 грн/доба (1 людина)/1700 грн/доба (2 людини)</td></tr>
-<tr><td>Двомісний для людей з обмеженими можливостями</td><td>1250 грн/доба (1 людина)/1700 грн/доба (2 людини)</td></tr>
-<tr><td>Двомісний поліпшений</td><td>1500 грн/доба (1 людина)/1800 грн/доба (2 людини)</td></tr>
-<tr><td>Напівлюкс</td><td>1600 грн/доба (1 людина)/2000 грн/доба (2 людини)</td></tr>
-<tr><td>Люкс (двокімнатний номер)</td><td>2600 грн/доба (1 людина)/3200 грн/доба (2 людини)</td></tr>
-<tr><td>Апартамент (трикімнатний номер)</td><td>3000 грн/доба (1 людина)/3400 грн/доба (2 людини)</td></tr>
+  <tr><td>Одномісний у блоці</td><td>1150 грн/доба</td></tr>
+  <tr><td>Одномісний стандартний</td><td>1500 грн/доба</td></tr>
+  <tr><td>Одномісний для людей з обмеженими можливостями</td><td>1250 грн/доба</td></tr>
+  <tr><td>Одномісний поліпшений</td><td>1500 грн/доба</td></tr>
+  <tr><td>Двомісний у блоці</td><td>1150 грн/доба (1 людина)/1500 грн доба (2 людини)</td></tr>
+  <tr><td>Двомісний стандартний</td><td>1250 грн/доба (1 людина)/1700 грн/доба (2 людини)</td></tr>
+  <tr><td>Двомісний для людей з обмеженими можливостями</td><td>1250 грн/доба (1 людина)/1700 грн/доба (2 людини)</td></tr>
+  <tr><td>Двомісний поліпшений</td><td>1500 грн/доба (1 людина)/1800 грн/доба (2 людини)</td></tr>
+  <tr><td>Напівлюкс</td><td>1600 грн/доба (1 людина)/2000 грн/доба (2 людини)</td></tr>
+  <tr><td>Люкс (двокімнатний номер)</td><td>2600 грн/доба (1 людина)/3200 грн/доба (2 людини)</td></tr>
+  <tr><td>Апартамент (трикімнатний номер)</td><td>3000 грн/доба (1 людина)/3400 грн/доба (2 людини)</td></tr>
 </table>
 </main>
 
 </body>
 </html>
+
 
