--- a/requisites.html
+++ b/requisites.html
@@ -21,11 +21,12 @@
 
 <main>
 <h2>Реквізити</h2>
-<p>Назва: XEXEPEXEPEXPEP</p>
-<p>Код ЄДРПОУ: XEXEPEXEPEXPEP</p>
-<p>Р/р: XEXEPEXEPEXPEP</p>
-<p>Банк: XEXEPEXEPEXPEP</p>
+<p>Назва: Готель-Дніпро</p>
+<p>Код ЄДРПОУ: 00000000</p>
+<p>Р/р: UA000000000000000000000000000</p>
+<p>Банк: Банк</p>
 </main>
 
 </body>
 </html>
+
