--- a/rooms-info.html
+++ b/rooms-info.html
@@ -22,13 +22,33 @@
 <main>
 <h2>Опис номерів</h2>
 
-<h3>Стандартний</h3>
-<p>Площа: XEXEPEXEPEXPEP м²</p>
+<h3>У блоці</h3>
+<p>Це приклад традиційної зручності та затишку. Такий номер підійде як для відпочинку, так і для роботи.</p>
 
+<h3>Стандартний</h3>
+<p>Це приклад традиційної зручності та затишку. Такий номер підійде як для відпочинку, так і для роботи. Номер має телевізор.</p>
+
+<h3>Для людей з обмеженими можливостями</h3>
+<p>Номер споряджений додатковими зручностями для людей з обмеженними можливостями</p>
+
+<h3>Поліпшенний</h3>
+<p>Номери цієї категорії мають поліпшений ремонт, більше зручностей для гостей та більшість з них мають вид на Дніпро</p>
+
+<h3>Напівлюкс</h3>
+<p>Для тих, хто цінує комфорт. Номери мають все необхідне для приємного відпочинку та результативної праці. У номері одне двоспальне ліжко.<p>
+</p>Вікна більшості номерів цієї категорії виходять на внутрішнє подвір'я готелю, де розташований фруктовий сад, та на мальовничі схили Дніпра.</p>
+</main>
+  
 <h3>Люкс</h3>
-<p>Площа: XEXEPEXEPEXPEP м²</p>
-<p>Мінібар, зона відпочинку, вид на XEXEPEXEPEXPEP.</p>
+<p>Шикарний двокімнатний люкс пропонує оптимальне співвідношення ціни і високих стандартів комфорту. </p>
+<p>Мінібар, зона відпочинку, вид на внутрішний двір готелю з фруктовим садом та видом на Дніпро</p>
+</main>
+
+<h3>Апартамент</h3>
+<p>Номери Апартаменти - це номери, які дають можливість відчувати домашній комфорт. Наші апартаменти складаються з трьох кімнат, об'єднуючи неперевершений стиль, вишуканість і комфорт. </p>
+<p>Мінібар, комплект рушників, халатів, тапочок, камін, зона відпочинку, вид на внутрішний двір готелю з фруктовим садом та видом на Дніпро</p>
 </main>
 
 </body>
 </html>
+
