--- a/rooms.html
+++ b/rooms.html
@@ -22,7 +22,10 @@
 <main>
 <h2>Наші номери</h2>
 <ul>
-  <li>Стандартний</li>
+  <li>У блоці</li>
+  <li>Для людей з обмеженими можливостями</li>
+  <li>Стандарт</li>
+  <li>Поліпшений</li>
   <li>Напівлюкс</li>
   <li>Люкс</li>
   <li>Апартаменти</li>
@@ -31,3 +34,4 @@
 
 </body>
 </html>
+
