--- a/services.html
+++ b/services.html
@@ -22,14 +22,18 @@
 <main>
 <h2>Наші послуги</h2>
 <ul>
-  <li>Сніданки XEXEPEXEPEXPEP</li>
-  <li>Wi-Fi</li>
-  <li>Паркування XEXEPEXEPEXPEP</li>
-  <li>Конференц зал XEXEPEXEPEXPEP</li>
-  <li>Трансфер XEXEPEXEPEXPEP</li>
+  <li>Сніданки по типу шведського столу</li>
+  <li>Безкоштовний Wi-Fi</li>
+  <li>Парк-місця на стоянці/в гаражі</li>
+  <li>Конференц зал</li>
+  <li>Ресторан "Samarqand"</li>
   <li>Ресепшн 24/7</li>
+  <li>Перукарня</li>
+  <li>Банний комплекс</li>
+  <li>Електрозаправка</li>
 </ul>
 </main>
 
 </body>
 </html>
+
