--- a/map.html
+++ b/map.html
@@ -20,10 +20,11 @@
 </nav>
 
 <main>
-<h2>Схема проїзду</h2>
-<p>Адреса готелю: XEXEPEXEPEXPEP</p>
-<p>Як доїхати: XEXEPEXEPEXPEP</p>
+<h2>Схема проїзду
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2594.0455565218263!2d32.066413276498366!3d49.4458559714178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d14b6331359fef%3A0xcc45e09bf6e1e0a7!2z0J7RgtC10LvRjCDQlNC90LXQv9GA!5e0!3m2!1sru!2sua!4v1768474861289!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></h2>
+<p>Адреса готелю: вулиця Верхня Горова, 13, Черкаси, Черкаська область, 18000</p>
 </main>
 
 </body>
 </html>
+
